--- a/src/SenseNet.Search.Lucene29.Local/SenseNet.Search.Lucene29.Local.nuspec
+++ b/src/SenseNet.Search.Lucene29.Local/SenseNet.Search.Lucene29.Local.nuspec
@@ -17,6 +17,7 @@
     <dependencies>
       <dependency id="SenseNet.Services" version="7.1.0" />
       <dependency id="SenseNet.Search.Lucene29" version="7.1.0" />
+      <dependency id="SenseNet.Search.Lucene29.Common" version="7.1.0" />
     </dependencies>
   </metadata>
   <files>
