--- a/src/SenseNet.Search.Lucene29.Local/SenseNet.Search.Lucene29.Local.nuspec
+++ b/src/SenseNet.Search.Lucene29.Local/SenseNet.Search.Lucene29.Local.nuspec
@@ -16,6 +16,7 @@
     <tags>sensenet ecm ecms indexing lucene</tags>
     <dependencies>
       <dependency id="SenseNet.Services" version="7.1.0" />
+      <dependency id="SenseNet.Search" version="1.0.0" />
       <dependency id="SenseNet.Search.Lucene29" version="7.1.0" />
       <dependency id="SenseNet.Search.Lucene29.Common" version="7.1.0" />
     </dependencies>
