--- a/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.nuspec
+++ b/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.nuspec
@@ -15,6 +15,7 @@
     <copyright>Copyright © Sense/Net Inc.</copyright>
     <tags>sensenet ecm ecms indexing lucene</tags>
     <dependencies>
+      <dependency id="SenseNet.Search" version="1.0.0" />
       <dependency id="SenseNet.Tools" version="2.1.1" />
     </dependencies>
   </metadata>
