Move allow everything permission filter to its own cs file.

--- a/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ISearchServiceContract.cs" />
     <Compile Include="Service\SearchManager.cs" />
     <Compile Include="Service\SearchService.cs" />
+    <Compile Include="Service\AllowEverythingPermissionFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
