Rearrange common, clien and service classes into separate projects.

--- a/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
@@ -14,7 +14,7 @@
     <services>
       <!-- This section is optional with the new configuration model  
            introduced in .NET Framework 4. -->
-      <service name="SenseNet.Search.Lucene29.Centralized.Service.SearchService" behaviorConfiguration="SearchServiceBehavior">
+      <service name="SenseNet.Search.Lucene29.Centralized.Index.SearchService" behaviorConfiguration="SearchServiceBehavior">
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:50123/SenseNetServiceModel/service/SearchService"/>
@@ -22,7 +22,7 @@
         </host>
         <endpoint address=""
                   binding="wsHttpBinding"
-                  contract="SenseNet.Search.Lucene29.Centralized.ISearchServiceContract" />
+                  contract="SenseNet.Search.Lucene29.Centralized.Common.ISearchServiceContract" />
       </service>
     </services>
     <behaviors>
