--- a/src/SenseNet.Search.Lucene29.Centralized/packages.config
+++ b/src/SenseNet.Search.Lucene29.Centralized/packages.config
@@ -1,7 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.3" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="OpenPop.NET" version="2.0.6.1120" targetFramework="net461" />
+  <package id="SenseNet.BlobStorage" version="7.1.0" targetFramework="net461" />
+  <package id="SenseNet.Common" version="7.1.0" targetFramework="net461" />
+  <package id="SenseNet.Preview" version="7.0.0" targetFramework="net461" />
   <package id="SenseNet.Search" version="1.0.0" targetFramework="net461" />
   <package id="SenseNet.Security" version="2.3.1" targetFramework="net461" />
+  <package id="SenseNet.Security.EF6SecurityStore" version="2.3.0.0" targetFramework="net461" />
+  <package id="SenseNet.Services" version="7.1.0" targetFramework="net461" />
+  <package id="SenseNet.TaskManagement.Core" version="1.1.0.0" targetFramework="net461" />
   <package id="SenseNet.Tools" version="2.1.1" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.3" targetFramework="net461" />
 </packages>
