--- a/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="sensenet">
+      <section name="providers" type="System.Configuration.NameValueSectionHandler" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
@@ -34,4 +40,17 @@
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
+  <connectionStrings>
+    <add name="SecurityStorage" connectionString="" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <sensenet>
+    <providers>
+       <!--<add key="SecurityMessageProvider" value="" />--> 
+    </providers>
+  </sensenet>
 </configuration>
