Add permission filter implementation on the service side.

--- a/src/SenseNet.Search.Lucene29.Centralized.Common/SenseNet.Search.Lucene29.Centralized.Common.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.Common/SenseNet.Search.Lucene29.Centralized.Common.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="ISearchServiceContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceQueryContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
