--- a/src/SenseNet.Search.Lucene29.Centralized.Index/SenseNet.Search.Lucene29.Centralized.Index.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.Index/SenseNet.Search.Lucene29.Centralized.Index.csproj
@@ -69,12 +69,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AllowEverythingPermissionFilter.cs" />
+    <Compile Include="Configuration\Identifiers.cs" />
     <Compile Include="Configuration\Providers.cs" />
+    <Compile Include="PermissionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchManager.cs" />
     <Compile Include="SearchService.cs" />
     <Compile Include="SearchUser.cs" />
     <Compile Include="SecurityHandler.cs" />
+    <Compile Include="ServicePermissionFilter.cs" />
     <Compile Include="ServiceSecurityContext.cs" />
   </ItemGroup>
   <ItemGroup>
