--- a/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
@@ -3,7 +3,9 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <sectionGroup name="sensenet">
+      <section name="messaging" type="System.Configuration.NameValueSectionHandler" />
       <section name="providers" type="System.Configuration.NameValueSectionHandler" />
+      <section name="tracing" type="System.Configuration.NameValueSectionHandler" />
     </sectionGroup>
   </configSections>
   <startup>
@@ -43,6 +45,9 @@
   <connectionStrings>
     <add name="SecurityStorage" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+    <!--<add key="SecurityMsmqChannelQueueName" value="" />-->
+  </appSettings>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
@@ -50,7 +55,14 @@
   </entityFramework>
   <sensenet>
     <providers>
-       <!--<add key="SecurityMessageProvider" value="" />--> 
+      <!--<add key="ClusterChannelProvider" value="SenseNet.Communication.Messaging.MsmqChannelProvider" />
+      <add key="SecurityMessageProvider" value="SenseNet.Security.Messaging.Msmq.MsmqMessageProvider" />-->
     </providers>
+    <messaging>
+      <!--<add key="MsmqChannelQueueName" value="" />-->
+    </messaging>
+    <tracing>
+      <!--<add key="TraceCategories" value="Index;IndexQueue;Messaging;Security;SecurityQueue;System" />-->
+    </tracing>
   </sensenet>
 </configuration>
