Put local index folder inside the service directory. Cleanup, add trace lines and remove undones.

--- a/src/SenseNet.Search.Lucene29.Centralized.Index/SenseNet.Search.Lucene29.Centralized.Index.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.Index/SenseNet.Search.Lucene29.Centralized.Index.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="AllowEverythingPermissionFilter.cs" />
     <Compile Include="Configuration\Identifiers.cs" />
+    <Compile Include="Configuration\Indexing.cs" />
     <Compile Include="Configuration\Providers.cs" />
     <Compile Include="Configuration\Security.cs" />
     <Compile Include="Configuration\Tracing.cs" />
