Remove unnecessary config lines.

--- a/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
@@ -3,7 +3,6 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <sectionGroup name="sensenet">
-      <section name="messaging" type="System.Configuration.NameValueSectionHandler" />
       <section name="providers" type="System.Configuration.NameValueSectionHandler" />
       <section name="tracing" type="System.Configuration.NameValueSectionHandler" />
     </sectionGroup>
@@ -13,30 +12,28 @@
   </startup>
   <system.serviceModel>
     <bindings>
-      <wsHttpBinding>
+      <netTcpBinding>
         <binding maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
           <readerQuotas maxDepth="32" maxStringContentLength="5242880" maxArrayLength="1638400" maxNameTableCharCount="1638400" />
         </binding>
-      </wsHttpBinding>
+      </netTcpBinding>
     </bindings>
     <services>
-      <!-- This section is optional with the new configuration model  
-           introduced in .NET Framework 4. -->
       <service name="SenseNet.Search.Lucene29.Centralized.Index.SearchService" behaviorConfiguration="SearchServiceBehavior">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:50123/SenseNetServiceModel/service/SearchService"/>
+            <add baseAddress="net.tcp://localhost:50123/SenseNetServiceModel/service/SearchService"/>
           </baseAddresses>
         </host>
         <endpoint address=""
-                  binding="wsHttpBinding"
+                  binding="netTcpBinding"
                   contract="SenseNet.Search.Lucene29.Centralized.Common.ISearchServiceContract" />
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="SearchServiceBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
+          <serviceMetadata httpGetEnabled="false"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
         </behavior>
       </serviceBehaviors>
@@ -55,12 +52,8 @@
   </entityFramework>
   <sensenet>
     <providers>
-      <!--<add key="ClusterChannelProvider" value="SenseNet.Communication.Messaging.MsmqChannelProvider" />
-      <add key="SecurityMessageProvider" value="SenseNet.Security.Messaging.Msmq.MsmqMessageProvider" />-->
+      <add key="SecurityMessageProvider" value="SenseNet.Security.Messaging.Msmq.MsmqMessageProvider" />
     </providers>
-    <messaging>
-      <!--<add key="MsmqChannelQueueName" value="" />-->
-    </messaging>
     <tracing>
       <!--<add key="TraceCategories" value="Index;IndexQueue;Messaging;Security;SecurityQueue;System" />-->
     </tracing>
