--- a/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.nuspec
+++ b/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.nuspec
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
-    <id>SenseNet.Search.Lucene29.Local</id>
-    <version>7.1.1</version>
-    <title>sensenet Lucene29 Local library</title>
+    <id>SenseNet.Search.Lucene29.Centralized</id>
+    <version>1.0</version>
+    <title>sensenet Lucene29 Centralized library</title>
     <authors>kavics,tusmester</authors>
     <owners>Sense/Net</owners>
     <licenseUrl>https://github.com/SenseNet/sensenet/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/SenseNet/sn-search-lucene29</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/SenseNet/sn-resources/master/images/sn-icon/sensenet-icon-64.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Lucene29 Local library for the sensenet platform containing the Lucene-based local indexing and query engine implementations.</description>
+    <description>Lucene29 Centralized library for the sensenet platform containing the Lucene-based centralized indexing and query engine implementations.</description>
     <releaseNotes>See release notes on GitHub.</releaseNotes>
     <copyright>Copyright © Sense/Net Inc.</copyright>
-    <tags>sensenet ecm ecms indexing lucene</tags>
+    <tags>sensenet ecm ecms indexing lucene service</tags>
     <dependencies>
       <dependency id="SenseNet.Services" version="7.1.1" />
       <dependency id="SenseNet.Search" version="1.1.0" />
@@ -22,6 +22,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\SenseNet.Search.Lucene29.Local.*" target="lib\net451" />
+    <file src="bin\Release\SenseNet.Search.Lucene29.Centralized.*" target="lib\net461" />
+    <file src="..\nuget\content\**" target="content" />
   </files>
 </package>
