--- a/src/SenseNet.Search.Lucene29.Centralized.Common/SenseNet.Search.Lucene29.Centralized.Common.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.Common/SenseNet.Search.Lucene29.Centralized.Common.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9E776EDA-681A-4330-8632-9ED0B67ED5A6}</ProjectGuid>
+    <ProjectGuid>{0352738E-FDA0-4ADF-934B-4F9EA7922152}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SenseNet.Search.Lucene29</RootNamespace>
-    <AssemblyName>SenseNet.Search.Lucene29</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <RootNamespace>SenseNet.Search.Lucene29.Centralized.Common</RootNamespace>
+    <AssemblyName>SenseNet.Search.Lucene29.Centralized.Common</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -29,13 +28,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>
-    </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Lucene.Net">
-      <HintPath>..\References\Lucene.Net.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -49,8 +43,8 @@
       <HintPath>..\packages\SenseNet.Tools.2.1.1\lib\net451\SenseNet.Tools.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,30 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\Lucene29.cs" />
-    <Compile Include="DumpVisitor.cs" />
-    <Compile Include="EnumConverter.cs" />
-    <Compile Include="FieldNameVisitor.cs" />
-    <Compile Include="ILuceneIndexingEngine.cs" />
-    <Compile Include="IndexDirectory.cs" />
-    <Compile Include="IndexingInfo.cs" />
-    <Compile Include="IndexReaderFrame.cs" />
-    <Compile Include="IndexWriterFrame.cs" />
-    <Compile Include="LuceneSearchManager.cs" />
-    <Compile Include="LucObject.cs" />
-    <Compile Include="LucQuery.cs" />
-    <Compile Include="LucQueryVisitor.cs" />
+    <Compile Include="ISearchServiceContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryExecutors\IQueryExecutor.cs" />
-    <Compile Include="QueryExecutors\LuceneQueryExecutor.cs" />
-    <Compile Include="QueryExecutors\QueryExecutor20131012.cs" />
-    <Compile Include="QueryExecutors\QueryExecutor20131012CountOnly.cs" />
-    <Compile Include="SnCollector.cs" />
-    <Compile Include="SnPerFieldAnalyzerWrapper.cs" />
-    <Compile Include="SnQueryToLucQueryVisitor.cs" />
+    <Compile Include="ServiceQueryContext.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="SenseNet.Search.Lucene29.nuspec" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
