--- a/src/SenseNet.Search.Lucene29.Centralized.Index/packages.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Index/packages.config
@@ -4,7 +4,12 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="SenseNet.Common" version="7.1.1" targetFramework="net461" />
   <package id="SenseNet.Search" version="1.1.0" targetFramework="net461" />
+  <package id="SenseNet.Search.Lucene29.Lucene.Net" version="2.9.4.301" targetFramework="net461" />
   <package id="SenseNet.Security" version="2.3.1" targetFramework="net461" />
   <package id="SenseNet.Security.EF6SecurityStore" version="2.3.0.0" targetFramework="net461" />
   <package id="SenseNet.Tools" version="2.2.0" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
 </packages>
