--- a/src/SenseNet.Search.Lucene29.Common/packages.config
+++ b/src/SenseNet.Search.Lucene29.Common/packages.config
@@ -9,10 +9,15 @@
   <package id="SenseNet.Common" version="7.1.1" targetFramework="net451" />
   <package id="SenseNet.Preview" version="7.0.0" targetFramework="net451" />
   <package id="SenseNet.Search" version="1.1.0" targetFramework="net451" />
+  <package id="SenseNet.Search.Lucene29.Lucene.Net" version="2.9.4.301" targetFramework="net461" />
   <package id="SenseNet.Security" version="2.3.1" targetFramework="net451" />
   <package id="SenseNet.Security.EF6SecurityStore" version="2.3.0.0" targetFramework="net451" />
   <package id="SenseNet.Services" version="7.1.1" targetFramework="net451" />
   <package id="SenseNet.TaskManagement.Core" version="1.1.0.0" targetFramework="net451" />
   <package id="SenseNet.Tools" version="2.1.1" targetFramework="net451" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.3" targetFramework="net451" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
 </packages>
